feat: use postgres 17; hosted.

--- a/docker-swarm.yml
+++ b/docker-swarm.yml
@@ -17,7 +17,33 @@ services:
         order: stop-first
     networks:
       - nw
-
+  
+  postgres:
+    image: postgres:17-alpine 
+    env_file:
+      - .env
+    environment:
+      PGDATA: /var/lib/postgresql/db
+      POSTGRES_DB: glitchtip-db
+      POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
+    deploy:
+      replicas: 1
+      update_config:
+        parallelism: 1
+        delay: 30s
+        order: start-first
+        failure_action: rollback
+        monitor: 30s
+      rollback_config:
+        parallelism: 1
+        delay: 10s 
+        order: stop-first
+    networks:
+      - nw 
+    volumes: 
+      - /mnt/glusterfs/glitchtip/postgres/db:/var/lib/postgresql/db
+  
   web:
     image: glitchtip/glitchtip:v4.1
     env_file:
